--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="nav_notifications">Notifications</string>
     <string name="server_check_image">Server check image</string>
     <string name="nav_connections">Connections</string>
+    <string name="nav_about">About</string>
+    <string name="icon">Icon</string>
+    <string name="icons">Icons</string>
+    <string name="repositories">Repositories</string>
 </resources>
